# LudoProj

./: .gitignore  CMakeLists.txt  CMakeListsW.txt  compile_commands.json  run.sh
ludo/: project.godot  terst.gd  terst.tscn
ludo/.import/: WHite.png-e0f9f8214d4be79197c00e265131a078.md5  WHite.png-e0f9f8214d4be79197c00e265131a078.stex  cell.png-48d7ba8b28d3806c66201b5267a42c67.md5  cell.png-48d7ba8b28d3806c66201b5267a42c67.stex  p1.png-c143d2407289dbea596b75cfa75ff901.md5  p1.png-c143d2407289dbea596b75cfa75ff901.stex  p2.png-45c7a9643736335de2ad885fd070623a.md5  p2.png-45c7a9643736335de2ad885fd070623a.stex  p3.png-1ce19f52d74dace7afe3c63e65f5504c.md5  p3.png-1ce19f52d74dace7afe3c63e65f5504c.stex  safecell.png-0e8964d87112c6919c5f41a7f5242a26.md5  safecell.png-0e8964d87112c6919c5f41a7f5242a26.stex
ludo/assets/PlayerIcons/: WHite.png.import  cell.png.import  p0.png.import  p1.png.import  p2.png.import  p3.png.import  safecell.png.import
ludo/engine/: engine.gd  testen.tscn
ludo/engine_cpp/: GameEngine.gdns  GameEngine.tscn  LIB_LINK.tres
ludo/global_scripts/global/: EngineGd.gd  Gl.gd  Gra.gd  Sigil.gd  icon.png.import
ludo/scenes/: Board.tscn  BoardCells.tscn  Cell.tscn  EngineGd.tscn  GameDisplay.tscn  Goti.tscn  Player.tscn  p0.png.import  wtf.tscn
ludo/scripts/: Bcell.gd  Board.gd  BoardCells.gd  Cell.gd  EngineGd.gd  Goti.gd  Label.gd  Player.gd  PlayerManager.gd
src/: .clang-format  GameEngine.cpp  GameEngine.h  GdRegClass.cpp
src/engine/: .gitignore  CMakeLists.txt  compile_commands.json  run.sh
src/engine/includes/: CoreE.h  DebugE.h  EngineE.h  GData.h
src/engine/src/: .clang-format  CoreE.cpp  DebugE.cpp  EngineE.cpp
